apps/homepage/homepage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    konghq.com/protocols: "https"
    konghq.com/https-redirect-status-code: "301"
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - home.${DOMAIN}
      secretName: kong-tls-wildcard
  rules:
    - host: home.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
